--- a/RocketClient/src/main/java/rocket/app/view/Mortgage.fxml
+++ b/RocketClient/src/main/java/rocket/app/view/Mortgage.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="446.0" prefWidth="551.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rocket.app.view.MortgageController">
+<AnchorPane prefHeight="446.0" prefWidth="551.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rocket.app.view.MortgageController">
    <children>
       <GridPane layoutX="82.0" layoutY="95.0" prefHeight="285.0" prefWidth="415.0">
         <columnConstraints>
@@ -17,18 +20,28 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Annual Income" GridPane.rowIndex="2" />
-            <Button mnemonicParsing="false" onAction="#btnCalculatePayment" prefHeight="40.0" prefWidth="127.0" text="Calculate" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <Label text="Monthly Expenses" GridPane.rowIndex="3" />
-            <Label text="Mortgage Term" GridPane.rowIndex="4" />
+            <Button fx:id="btnCalculate" mnemonicParsing="false" onAction="#btnCalculatePayment" prefHeight="40.0" prefWidth="127.0" text="Calculate" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Label text="Monthly Expenses" GridPane.rowIndex="4" />
+            <Label text="Mortgage Term" GridPane.rowIndex="5" />
             <Label text="House Cost" />
             <Label text="Down Payment" GridPane.rowIndex="1" />
-            <Label text="Calculated Payment" GridPane.rowIndex="5" />
+            <Label text="Calculated Payment" GridPane.rowIndex="6" />
+            <Label text="Credit Score" GridPane.rowIndex="3" />
+            <TextField fx:id="txtCreditScore" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="txtAnnualIncome" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtExpenses" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="txtHouseCost" GridPane.columnIndex="1" />
+            <TextField fx:id="txtTerm" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label fx:id="lblMortgagePaymentAmunt" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtDownPayment" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label GridPane.columnIndex="1" GridPane.rowIndex="6" />
          </children>
       </GridPane>
    </children>
